--- a/Ecommerce/Views/Home/Index.cshtml
+++ b/Ecommerce/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 	Normal
 </a>
 
-<a href=@Url.Action("ParalelCrud","Home")>
+<a href=@Url.Action("ParallelCrud", "Home")>
 
 	Paralel Programlama
 </a>
